fixed layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -171,9 +171,9 @@ background:linear-gradient(
 .cards-box{
   width:100%;
     display:grid;
-    grid-template-columns:repeat(4,1fr);
+    grid-template-columns:repeat(2,1fr);
     margin-top:30px;
-    gap:18px;
+    gap:20px;
       background:
     linear-gradient(
         145deg,
@@ -195,7 +195,7 @@ background:linear-gradient(
   border-radius:18px;
   padding:5px 8px;
   transition:0.3s ease;
-  min-height:110px;
+  min-height:220px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
